# Review-Cat

./: .env.example  .gitignore  AGENT.md  CMakeLists.txt  CMakePresets.json  MEMORY.md  PLAN.md  README.md  ReviewCatBase.cmake  TODO.md
.github/: README.md
.github/agents/: _TEMPLATE.md  code-review.md  coder.md  docs.md  implementer.md  merge-expert.md  qa.md  reviewcat.md  security.md
.github/skills/: README.md
.github/skills/_TEMPLATE_/: SKILL.md
.github/skills/docgen/: SKILL.md
.github/skills/memory-query/: SKILL.md
.github/skills/release-manager/: SKILL.md
.github/workflows/: benchmarks.yml  integration-tests.yml  skill-lint.yml  unit-tests.yml
app/: CMakeLists.txt  README.md
app/src/cli/: main.cpp
app/tests/: test_sanity.cpp
archive/: ARCHIVE.md
cmake/toolchains/: win64-mingw.cmake
config/: dev.toml  externals.json
dev/: README.md
dev/agents/: merge-expert.md
docs/: ARCHITECTURE.md  COPILOT_CLI_CHALLENGE_DESIGN.md  DIRECTOR_DEV_WORKFLOW.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  PROMPT_COOKBOOK.md
docs/app/: CONFIGURATION.md  INDEX.md  USAGE.md
docs/dev/: AUDIT_SYSTEM.md  CONFIGURATION.md  CONTAINERS_AND_WORKTREES.md  COPILOT_CLI_CHALLENGE_DESIGN.md  DIRECTOR_DEV_WORKFLOW.md  ENVIRONMENT.md  ERROR_HANDLING.md  GITHUB_LABELS.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  PROMPT_COOKBOOK.md  TESTING_STRATEGY.md
docs/specs/: README.md  SPECS.md  _template.md
memory/: README.md  catalog.json
memory/lt/: README.md
memory/st/: README.md
scripts/: README.md  build.sh  clean.sh  setup.sh  skill_lint.py  test.sh
specs/agents/: DirectorDevAgent.md  RoleAgents.md
specs/components/: ReviewInput.md  RunConfig.md
specs/entities/: AuditIdFactory.md  PromptFactory.md
specs/systems/: AuditStoreSystem.md  CLIFrontend.md  CopilotRunnerSystem.md
test/: README.md
test/bench/: README.md  example_bench.sh
test/e2e/: README.md
test/fixtures/: README.md
test/fuzz/: README.md
test/integration/: README.md
test/unit/: README.md
(+89 files in other folders)
